# code-sync-mcp

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  file_syncer_test.go  main.go
.github/workflows/: code-sync-mcp-server.yml  code-sync-proxy.yml  code-sync-sidecar.yml  go-test.yml
code-sync-mcp/: pyproject.toml
code-sync-mcp-server/: pyproject.toml
code-sync-mcp-server/src/code_sync_mcp/: cli.py  server.py  verify_handler.py  websocket_client.py
code-sync-mcp-server/tests/: test_verify_handler.py
code-sync-mcp/src/code_sync_mcp/: push_handler.py  websocket_client.py
code-sync-mcp/src/code_sync_mcp/pb/: ws_pb2.py
code-sync-mcp/tests/: test_push_handler.py  test_websocket_client.py
code-sync-proxy/: .gitignore  Dockerfile  pyproject.toml
code-sync-proxy/src/code_sync_proxy/: app.py  config.py
code-sync-proxy/src/code_sync_proxy/pb/: ws_pb2.py
code-sync-proxy/src/code_sync_proxy/routers/: ws.py
code-sync-proxy/src/code_sync_proxy/ws/: base_manager.py  connection_store.py  interfaces.py  manager.py  message.py  registry.py  standalone.py
code-sync-proxy/tests/: conftest.py  test_ws_manager.py
code-sync-sidecar/: Dockerfile  README.md  env_manager.go  env_manager_test.go  file_syncer.go  file_syncer_test.go  go.mod  go.sum  main.go  process_signal.go
code-sync-sidecar/binaries/: rsync-3.4.1-linux-amd64
code-sync-sidecar/launcher-script/: rsync-launcher.sh  simple-launcher.sh
code-sync-sidecar/log/: log.go
code-sync-sidecar/pb/: ws.pb.go
code-sync-sidecar/rsync/: amd64.Dockerfile  arm64.Dockerfile  build-amd64.sh  build-arm64.sh
demo-app/: .bifrost.json  .gitignore  Dockerfile  README.md  app.py  code-sync-entrypoint.sh  pyproject.toml
mcp-server/: .env.example  README.md  pyproject.toml
mcp-server/src/bifrost_mcp/: cli.py  client_manager.py  push_handler.py  websocket_client.py
mcp-server/tests/: test_push_handler.py  test_websocket_client.py
pb/: ws.pb.go
proto/: ws.proto
