[project]
name = "code-sync-mcp-server"
version = "0.1.0"
description = "Code Sync MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.24.0",
    "mcp",
    "pydantic>=2.0.0",
    "gitpython>=3.1.40",
    "websockets>=15.0.1",
    "aiofiles>=24.1.0",
    "protobuf>=6.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
