[project]
name = "code-sync-proxy-demo"
version = "0.1.0"
description = "A simple FastAPI application"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "ddtrace",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313" 